# xbase

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.py  xsdk_conan.cmake
include/: xbase.h
include/xbase/: xdata.h  xobject.h  xpointers.h  xuid.h
src/: CMakeLists.txt  xbase.cpp
src/xdata/: xdata_impl.cpp  xdata_impl.h
tests/: CMakeLists.txt  xdata_test.cpp  xobject_test.cpp
